--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NODE_ENV=development
-REACT_APP_API_URL=http://localhost:3000/admin
-REACT_APP_FRONT_API_URL=http://localhost:3000/v1
+NODE_ENV=production
+REACT_APP_API_URL=http://65.2.29.96:3000/admin
+REACT_APP_FRONT_API_URL=http://43.205.124.88:3000/v1
 # REACT_APP_API_URL=http://apexdryfruitstores.in/api/admin
 # REACT_APP_FRONT_API_URL=http://apexdryfruitstores.in/api/v1
